@@ -693,6 +693,7 @@ following image formats are supported:
     @tab used in some games by Entertainment Software Partners
 @item Sierra VMD video       @tab     @tab  X
     @tab Used in Sierra VMD files.
+@item Silicon Graphics RLE 8-bit video  @tab     @tab  X
 @item Smacker video          @tab     @tab  X
     @tab Video encoding used in Smacker.
 @item SMPTE VC-1             @tab     @tab  X
