@@ -290,6 +290,7 @@ enum AVCodecID {
     AV_CODEC_ID_EXR,
     AV_CODEC_ID_VP7,
     AV_CODEC_ID_SANM,
+    AV_CODEC_ID_SGIRLE,
 
     /* various PCM "codecs" */
     AV_CODEC_ID_FIRST_AUDIO = 0x10000,     ///< A dummy id pointing at the start of audio codecs
